Finished migrating to Maven. Updated code to avoid using Java reflection and deleted the previous IOHandler. Need to add documentation and make a few amends.
Signed-off-by: Darius-Constantin <darius.constantin04@stud.acs.upb.ro>