@@ -12,6 +12,7 @@ import java.io.IOException;
 import java.util.ArrayList;
 
 public final class IOHandler {
+    ///////////////// FA JAVADOC AICI ------------------------------------------------------
     // Singleton instance directly/publicly accessible to avoid a significant number of
     // getInstance() calls, thus reducing overhead. To avoid instance reassignment, the field
     // is declared "final" with empty parameters that must be manually set to avoid Runtime
@@ -24,44 +25,21 @@ public final class IOHandler {
     @Getter
     private ArrayNode output = objectMapper.createArrayNode();
 
-    private ArrayList<ObjectNode> objectNodes = new ArrayList<ObjectNode>();
-    private ArrayList<ArrayNode> arrayNodes = new ArrayList<ArrayNode>();
+    private ArrayList<ObjectNode> objectNodes = new ArrayList<>();
 
-    public ObjectNode createObjectNodeFromObject(final Object obj) throws IllegalAccessException {
-        ObjectNode node = objectMapper.createObjectNode();
-        if (obj instanceof SerializeHandler s) {
-            ArrayList<SerializableField> fields = s.getSerializableFields();
-            for (SerializableField serializableField : fields) {
-                node.put(serializableField.getLabel(),
-                        objectMapper.valueToTree(serializableField.getValue()));
-            }
-        }
-        return node;
+    public JsonNode createNodeFromObject(final Object obj) throws IllegalAccessException {
+        return objectMapper.valueToTree(obj);
     }
 
     public void writeJsonNodeToObject(final String name,
                                       final JsonNode node) {
-        objectNodes.get(0).put(name, node);
-    }
-
-    public <T> ArrayNode createArrayNodeFromArray(final ArrayList<T> array)
-            throws IllegalAccessException {
-        ArrayNode node = objectMapper.createArrayNode();
-        for (Object obj : array) {
-            if (obj instanceof ArrayList) {
-                node.add(createArrayNodeFromArray((ArrayList<?>) obj));
-            } else {
-                node.add(createObjectNodeFromObject(obj));
-            }
-        }
-        return node;
+        objectNodes.getFirst().set(name, node);
     }
 
     public void resetInstance() {
         objectMapper = new ObjectMapper();
         output = objectMapper.createArrayNode();
-        objectNodes = new ArrayList<ObjectNode>();
-        arrayNodes = new ArrayList<ArrayNode>();
+        objectNodes = new ArrayList<>();
     }
 
     public void handleInput(final String inPath) throws IOException {
@@ -76,11 +54,11 @@ public final class IOHandler {
     }
 
     public void beginObject() {
-        objectNodes.add(0, objectMapper.createObjectNode());
+        objectNodes.addFirst(objectMapper.createObjectNode());
     }
 
     public void endObject() {
-        objectNodes.remove(0);
+        objectNodes.removeFirst();
     }
 
     public void writeToObject(final String name,
@@ -88,7 +66,7 @@ public final class IOHandler {
         if (objectNodes.isEmpty()) {
             throw new RuntimeException("IOHandler no objectNodes.");
         }
-        objectNodes.get(0).put(name, value);
+        objectNodes.getFirst().put(name, value);
     }
 
     public void writeToObject(final String name,
@@ -96,13 +74,13 @@ public final class IOHandler {
         if (objectNodes.isEmpty()) {
             throw new RuntimeException("IOHandler no objectNodes.");
         }
-        objectNodes.get(0).put(name, value);
+        objectNodes.getFirst().put(name, value);
     }
 
     public void writeObjectToOutput() {
         if (objectNodes.isEmpty()) {
             throw new RuntimeException("IOHandler no objectNodes.");
         }
-        output.add(objectNodes.get(0));
+        output.add(objectNodes.getFirst());
     }
 }
